Created a DB lookup page to access all data from the front-end
