# src/main/java/com/bh/tha/web/controllers/TransactionsController.java
@@ -12,7 +12,6 @@ import org.springframework.web.bind.annotation.RestController;
 
 import javax.validation.Valid;
 import javax.validation.constraints.Min;
-import javax.validation.constraints.NotNull;
 import java.util.List;
 
 @RestController
@@ -41,16 +40,14 @@ public class TransactionsController implements TransactionsApi {
     }
 
     @Override
-    public ResponseEntity<List<Transaction>> getTransactions(@NotNull @Min(1L) @Valid Long accountId) {
+    public ResponseEntity<List<Transaction>> findTransactions(@Min(1L) @Valid Long accountId) {
         try {
-            List<Transaction> transactionList = transactionMapper.toDtoList(transactionsService.getTransactionsForAccount(accountId));
+            List<Transaction> transactionList = transactionMapper.toDtoList(transactionsService.findTransactions(accountId));
             return ResponseEntity.ok(transactionList);
         } catch (NotFoundException e1) {
             return ResponseEntity.notFound().build();
         } catch (Exception e) {
             return ResponseEntity.badRequest().build();
         }
-
-
     }
 }
